RESOLVED FIXED84647
Oscillator::setWaveTable() should not reset oscillator phase
https://bugs.webkit.org/show_bug.cgi?id=84647
Summary Oscillator::setWaveTable() should not reset oscillator phase
Chris Rogers
Reported 2012-04-23 15:59:49 PDT
Oscillator::setWaveTable() should not reset oscillator phase
Attachments
Patch (1.20 KB, patch)
2012-04-23 16:01 PDT, Chris Rogers
no flags
Chris Rogers
Comment 1 2012-04-23 16:01:28 PDT
Kenneth Russell
Comment 2 2012-04-23 16:05:01 PDT
Comment on attachment 138448 [details] Patch Looks straightforward. Layout test?
Chris Rogers
Comment 3 2012-04-23 16:08:33 PDT
Comment on attachment 138448 [details] Patch Thanks Ken. Unfortunately, this is quite difficult to test since it involves the main thread calling setWaveTable() while the audio thread is rendering, and this is racy as far as layout tests go.
WebKit Review Bot
Comment 4 2012-04-23 20:19:55 PDT
Comment on attachment 138448 [details] Patch Clearing flags on attachment: 138448 Committed r114988: <http://trac.webkit.org/changeset/114988>
WebKit Review Bot
Comment 5 2012-04-23 20:19:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.