Oscillator::setWaveTable() should not reset oscillator phase https://bugs.webkit.org/show_bug.cgi?id=84647

Reviewed by Kenneth Russell.

* Modules/webaudio/Oscillator.cpp:
(WebCore::Oscillator::setWaveTable):


Canonical link: https://commits.webkit.org/102152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114988 268f45cc-cd09-0410-ab3c-d52691b4dbfc